fixed selection on mobile

--- a/blocks/scroll-animation/scroll-animation.css
+++ b/blocks/scroll-animation/scroll-animation.css
@@ -56,6 +56,7 @@
   font-weight: 700;
   line-height: 1;
   cursor: pointer;
+  user-select: none;
 }
 
 .scroll-animation .scroll-animation-text {
